# package-python-machine-learning-algorithms

./: pyproject.toml
notebooks/: test.ipynb
src/: kmeans.py  knn.py  utils.py
