[tool.poetry]
name = "package-python-machine-learning-algorithms"
version = "0.1.0"
description = "A package for tailored machine learning algorithms"
authors = ["ghazwan namou jablak <ghazwan.namou_jablak@syngenta.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.25.0"
scikit-learn = "^1.7.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
